--- a/Sales.Api/appsettings.json
+++ b/Sales.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=DESKTOP-JKBS9RK\\MSSQLSERVER01;Initial Catalog=IMS_Sales;User ID=sa;Password=user@123;Encrypt=True;Trust Server Certificate=True"
+        "DefaultConnection": "Data Source=192.168.29.37,1438;Initial Catalog=IMS_Sales;User ID=sa;Password=User@123;Encrypt=True;Trust Server Certificate=True"
     },
     "Logging": {
         "LogLevel": {
@@ -10,3 +10,5 @@
     },
     "AllowedHosts": "*"
 }
+
+
